# Command-Line-Tool---Personal-Task-Manager

./: CMakeLists.txt  README.md  create.h  create.py  main.cpp  main.py  main_old.cpp
Python311/Scripts/: srt  srt-deduplicate  srt-fixed-timeshift  srt-linear-timeshift  srt-lines-matching  srt-mux  srt-normalise  srt-play  srt-process
pylibrary/: function.py
